For index made header div enclose the close button and put header, text,and buttons in a container. applied flexshrink to prevent icon from getting squeezed, applied flex to the body and a few gaps and paddings

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px;
+  display:flex;
+  gap:16px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -47,7 +51,22 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
-  padding: 0;
+  padding: 0px;
+}
+
+.header
+{
+  font-size: large;
+  font-weight: bold;
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+  margin-bottom:10px;
+}
+
+.text
+{
+  margin-bottom: 10px;
 }
 
 button {
